# simulatedmicroscopy

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  404.html  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: deploydocs.yml  pythonpackage.yml
api/: index.html
data-generation-example/: index.html
docs/: api.md  data-generation-example.md  example-usage.md  index.md  installation.md
example-usage/: index.html
installation/: index.html
search/: search_index.json
simulatedmicroscopy/: __init__.py  image.py  images.py  input.py  particle.py  psf.py  util.py  validate.py
src/simulatedmicroscopy/: __init__.py  _version.py  image.py  input.py  psf.py
tests/: test_coordinates.py  test_image.py  test_particle.py  test_psf.py  test_util.py  test_validate.py
