[metadata]
name = simulatedmicroscopy

description =  Python package to create synthetic (fluorescence) microscopy images of (nano)particles and convolution with a point spread function
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rhoitink/simulatedmicroscopy
author = Roy Hoitink
author_email = L.D.Hoitink@uu.nl
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/rhoitink/simulatedmicroscopy/issues
    Documentation = https://github.com/rhoitink/simulatedmicroscopy#README.md
    Source Code = https://github.com/rhoitink/simulatedmicroscopy
    User Support = https://github.com/rhoitink/simulatedmicroscopy/issues

[options]
packages = find:
install_requires =
    numpy
    matplotlib
    h5py
    scipy
    scikit-image>=0.20.0

python_requires = >=3.8
include_package_data = True
package_dir =
    =src
setup_requires = setuptools_scm

[options.packages.find]
where = src

[options.extras_require]
dev =
    black
    flake8
    pytest
    pytest-cov
docs =
    mkdocs
    mkdocs-material
    mkdocstrings[python]
    mkdocs-gen-files
    mkdocs-literate-nav